k8s/image-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-catalog
  template:
    metadata:
      labels:
        app: image-catalog
    spec:
      containers:
        - image: prporso/image-catalog:2022-11-14-12-45-13
          name: image-catalog
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
              httpGet:
                path: /health/ready
                port: server
              initialDelaySeconds: 20
              periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: image-catalog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: image-catalog
