k8s/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /image-catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: image-catalog
                port:
                  number: 8080
#          - path: /image-catalog(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: image-catalog
#                port:
#                  number: 8080
